@@ -13,11 +13,11 @@ if (${HOSTNAME} =~ m/bit\.[lbl.gov|local]/) {
     $cmd="./configure --prefix=${HOME}/Darwin/fastbit --enable-maintainer-mode --with-java CFLAGS='-g -O0 -m64 -Wall' CXXFLAGS='-g -O0 -m64 -Wall'";
 }
 elsif (${HOSTNAME} =~ m/^hopper\w+[.nersc.gov]?$/ ) {
-# on hopper at NERSC, use gcc/g++ by default, no debugging
-    $cmd="./configure --disable-shared --without-getpwuid --disable-debug --enable-xopt --without-java --prefix=/project/projectdirs/m1248/hopper/fastbit";
+# on hopper at NERSC, use the default Cray compilers wrappers, no debugging
+    $cmd="./configure CC=cc CXX=CC --disable-shared --without-getpwuid --disable-debug --enable-xopt --without-java --prefix=/project/projectdirs/m1248/hopper/fastbit";
 }
 elsif (${HOSTNAME} =~ m/^fr\w+[.nersc.gov]?$/ ) {
-# on franklin at NERSC, use gcc/g++ by default, no debugging
+# on franklin at NERSC, use the default compilers, no debugging
     $cmd="./configure --disable-shared --without-getpwuid --disable-debug --enable-xopt --without-java --prefix=/project/projectdirs/m1248/franklin/fastbit";
 }
 elsif (${HOSTNAME} =~ m/^d\w+[.lbl.gov]?$/) {
