@@ -17,12 +17,14 @@ docs: Doxyfile
 	perl -pi -e 's/(PROJECT_NUMBER\s*=\s*).+/\1$(PACKAGE_VERSION)/' Doxyfile
 	doxygen
 
-# an extra rule to replace macros prefixed with PACKAGE_ to FASTBIT_
-fastbit-config.h: FastBit-prefix
-FastBit-prefix: stamp-h1
+# override the default rule generated by automake to make sure the prefix is changed
+fastbit-config.h: stamp-h1
+	@if test ! -f $@; then rm -f stamp-h1; else :; fi
+	@if test ! -f $@; then $(MAKE) $(AM_MAKEFLAGS) stamp-h1; else :; fi
 	@if [ "`fgrep ' PACKAGE_' fastbit-config.h | wc -l`" -gt 0 ]; then \
 	mv fastbit-config.h fastbit-config.bak; \
 	sed -e 's/ PACKAGE_/ FASTBIT_/' fastbit-config.bak > fastbit-config.h; \
+	if test ! fastbit-config.h -nt stamp-h1; then sleep 1; touch fastbit-config.h; else :; fi \
 	fi
 
 if MAINTAINER_MODE
@@ -50,4 +52,3 @@ endif
 
 # targets that are not files
 .PHONY: docs
-.PHONY: FastBit-prefix
